After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787989 - launch-environment: don't name greeter log $display-greeter.log with user displays
launch-environment: don't name greeter log $display-greeter.log with user dis...
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2017-09-21 13:50 UTC by Ray Strode [halfline]
Modified: 2017-09-21 13:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
launch-environment: don't name greeter log $display-greeter.log with user displays (3.39 KB, patch)
2017-09-21 13:51 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2017-09-21 13:50:55 UTC
If the X server is started as part of the session, we don't know the
display up front. So don't try to encode the display in the log in that
case.
Comment 1 Ray Strode [halfline] 2017-09-21 13:51:00 UTC
Created attachment 360198 [details] [review]
launch-environment: don't name greeter log $display-greeter.log with user displays
Comment 2 Ray Strode [halfline] 2017-09-21 13:51:26 UTC
Attachment 360198 [details] pushed as 10418ea - launch-environment: don't name greeter log $display-greeter.log with user displays