launch-environment: don't name greeter log $display-greeter.log with user displays

If the X server is started as part of the session, we don't know the
display up front. So don't try to encode the display in the log in that
case.

https://bugzilla.gnome.org/show_bug.cgi?id=787989